<resources>
    <string name="app_name">DIAbetes</string>
    <string name="title_home">Forside</string>
    <string name="title_dashboard">Insulinberegner</string>
    <string name="title_notifications">Måltidsplanlægger</string>
    <string name="title_menuhome">Hjem</string>
    <string name="title_profile">Min profil</string>
    <string name="title_aboutUs">Om os</string>
    <string name="title_NewLong">Ny langtidsblodsukker</string>
    <string name="title_notesList">Noter</string>
    <string name="title_bloodoverview">Blodsukkermålingsoversigt</string>
    <string name="open">Åben</string>
    <string name="close">Luk</string>
    <string name="meal_log">Måltidsoversigt</string>
    <string name="FAQ">FAQ</string>
    <string name="parent_control">Forældrekontrol</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blood_glycose_overview">BloodGlycoseOverview</string>
    <string name="oldmeasure"> <u>Liste over gamle målinger</u></string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_blood_glucose_list">BloodGlucoseListActivity</string>
    <string name="title_activity_generate_pdf">GeneratePDF</string>
    <string name="title_activity_longterm_measurement">LongtermMeasurement</string>
    <string name="frida">Data for fødevarers næringsindhold er stillet til rådighed af DTU Fødevareinstituttet (<a href="http://frida.fooddata.dk">http://frida.fooddata.dk</a>)</string>
    <string name="title_activity_uci">UCI</string>
    <string name="title_activity_uciadvanced">UCIAdvanced</string>
    <string name="title_activity_uciadvanced_good_bad">UCIAdvancedGoodBad</string>
    <string name="title_activity_add_new_food">AddNewFoodActivity</string>
    <string name="title_activity_old_calculations">OldCalculationsActivity</string>
</resources>
