<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/profile" android:title="@string/title_profile" android:icon="@drawable/icons8_customer_24"/>
    <item android:id="@+id/mealLog" android:title="@string/meal_log" android:icon="@drawable/icons8_index_24"/>
    <item android:id="@+id/navigation_notes" android:title="@string/title_notesList" android:icon="@drawable/icons8_note_24" />
    <item android:id="@+id/newbloodglucoselevel" android:title="Ny blodsukker måling" android:icon="@drawable/icons8_diabetes_26" />
    <item android:id="@+id/navigation_NewLong" android:title="@string/title_NewLong" android:icon="@drawable/statisticsicon"/>
    <item android:id="@+id/blood_glycose_overview" android:title="@string/title_bloodoverview" android:icon="@drawable/icons8_task_24_black" />
    <item android:id="@+id/navigation_FAQ" android:title="@string/FAQ" android:icon="@drawable/icons8_faq_50"/>
    <item android:id="@+id/navigation_Parent_control" android:title="@string/parent_control" android:icon="@drawable/icons8_family_24"/>
    <item android:id="@+id/navigation_PDF" android:title="Generer PDF" android:icon="@drawable/pdficon"/>
    <item android:id="@+id/navigation_AboutUS" android:title="@string/title_aboutUs" android:icon="@drawable/icons8_info_24"/>
</menu>
